# api/swagger.yaml
@@ -411,6 +411,11 @@ components:
       type: object
       additionalProperties:
         type: object
+        required:
+          - name
+          - resources
+          - position
+          - prev-position
         properties:
           name:
             type: string
@@ -658,12 +663,22 @@ components:
 
     TradingResource:
       allOf:
-      - $ref: '#/components/schemas/Resource'
-      - properties:
-          buy-price:
-            type: number
-            format: double
-          sell-price:
+        - $ref: '#/components/schemas/Resource'
+        - properties:
+            buy-price:
+              type: number
+              format: double
+            sell-price:
+              type: number
+              format: double
+
+    PlanetResource:
+      allOf:
+        - properties:
+            buy-price:
+              type: number
+              format: double
+            sell-price:
               type: number
               format: double
 
@@ -675,7 +690,7 @@ components:
     TradingResources:
       type: object
       additionalProperties:
-        $ref: '#/components/schemas/TradingResource'
+        $ref: '#/components/schemas/PlanetResource'
 
     Players:
       type: object
